# xfresco

./: AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  README  README.md  TODO  acconfig.h  callbacks.c  config.h  config.h.in  configure  configure.ac  configure.in  configure.scan  libtool  namelist.c  rpmspec  tarxfresco  xfresco2.gld  xfresco2.gldp  xfresco3.gld
devel/: BIB  xfresco2.gldp.bak
devel/xfresco2.1/: Makefile.in
pixmaps/: Makefile  xfresco_logo1.xpm  xfresco_logo3.xpm
po/: Makefile  Makefile.in
share/xfresco/pixmaps/: Makefile  Makefile.in
src/: Makefile  Makefile.in  callbacks.c  callbacks.h  lixo  namelist.c  temp  xfresco  xfresco.in  xfresco.rc
test/: be11sn_colec_s1.in  fe56dp_dwba.in  fe56dp_dwba.out  fort.201  fort.202  fort.38  fort.39  fort.40  fort.45  fort.46  fort.48  fort.56  fort.7  fort.75  he6pb_spd_tho5.in  test.in  test2.in  test4.in  test6.in
